[package]
name = "pixel-proxy"
version = "0.1.0"
edition = "2021"
description = "A fast image proxy service built with Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = "0.4"
tower-http = "0.4"
axum = "0.6"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
